syntax = "proto3";

package details;

import "github.com/tuneinc/truss/deftree/googlethirdparty/annotations.proto";
import "bookinfo/pb/comments/comments.proto";

service BookDetails {
    rpc Detail (DetailReq) returns (DetailResp) {
        option (google.api.http) = {
          get: "/v1/detail"
        };
    }
}

message DetailReq {
    int64 id = 1;
}

message DetailResp {
    int32 code = 1;
    string msg = 2;
    DetailRespData data = 3;
}

message DetailRespData {
    int32 id = 1; //ID
    string name = 2; //书名
    string intro = 3; //简介
    repeated comments.Comment comments = 4;
}